// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`biome A not using biome 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingBiome": false,
    "isUsingBun": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingKnip": false,
    "isUsingNyc": false,
    "isUsingOxc": false,
    "isUsingPreact": false,
    "isUsingReact": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVitest": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "",
  "fileContentObject": undefined,
  "fileName": "",
  "originalFileContent": "",
  "passed": [],
  "warnings": [],
}
`;

exports[`biome B missing file 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingBiome": true,
    "isUsingBun": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingKnip": false,
    "isUsingNyc": false,
    "isUsingOxc": false,
    "isUsingPreact": false,
    "isUsingReact": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVitest": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "",
  "fileName": "",
  "originalFileContent": "",
  "passed": [],
  "warnings": [],
}
`;

exports[`biome C empty file 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingBiome": true,
    "isUsingBun": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingKnip": false,
    "isUsingNyc": false,
    "isUsingOxc": false,
    "isUsingPreact": false,
    "isUsingReact": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVitest": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "",
  "fileContentObject": {},
  "fileName": "",
  "originalFileContent": "",
  "passed": [],
  "warnings": [
    "use-the-correct-schema",
    "has-a-formatter-section",
    "has-a-javascript-section",
    "has-a-json-section",
    "has-a-linter-section",
    "has-a-organize-imports-section",
    "has-a-vcs-section",
    "has-an-overrides-section-array",
  ],
}
`;

exports[`biome D invalid json 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingBiome": true,
    "isUsingBun": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingKnip": false,
    "isUsingNyc": false,
    "isUsingOxc": false,
    "isUsingPreact": false,
    "isUsingReact": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVitest": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "{ invalid json }",
  "fileName": "",
  "originalFileContent": "",
  "passed": [],
  "warnings": [],
}
`;

exports[`biome E minimal valid biome.json 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingBiome": true,
    "isUsingBun": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingKnip": false,
    "isUsingNyc": false,
    "isUsingOxc": false,
    "isUsingPreact": false,
    "isUsingReact": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVitest": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "{"$schema":"./node_modules/@biomejs/biome/configuration_schema.json"}",
  "fileContentObject": {
    "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
  },
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "use-the-correct-schema",
  ],
  "warnings": [
    "has-a-formatter-section",
    "has-a-javascript-section",
    "has-a-json-section",
    "has-a-linter-section",
    "has-a-organize-imports-section",
    "has-a-vcs-section",
    "has-an-overrides-section-array",
  ],
}
`;

exports[`biome F fix missing sections 1`] = `
{
  "canFix": true,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingBiome": true,
    "isUsingBun": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingKnip": false,
    "isUsingNyc": false,
    "isUsingOxc": false,
    "isUsingPreact": false,
    "isUsingReact": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVitest": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "{
  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 2,
    "lineEnding": "lf",
    "lineWidth": 80
  },
  "javascript": {
    "formatter": {
      "arrowParentheses": "asNeeded",
      "bracketSpacing": true,
      "quoteStyle": "single",
      "semicolons": "asNeeded"
    }
  },
  "json": {
    "parser": {
      "allowComments": false,
      "allowTrailingCommas": false
    }
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true,
      "style": {
        "useBlockStatements": "off"
      }
    }
  },
  "organizeImports": {
    "enabled": true
  },
  "overrides": [
    {
      "include": [
        "*.test.ts"
      ],
      "linter": {
        "rules": {
          "style": {
            "noUnusedTemplateLiteral": "off"
          }
        }
      }
    }
  ],
  "vcs": {
    "clientKind": "git",
    "enabled": true,
    "useIgnoreFile": true
  }
}",
  "fileContentObject": {
    "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
    "formatter": {
      "indentStyle": "space",
      "indentWidth": 2,
      "lineEnding": "lf",
      "lineWidth": 80,
    },
    "javascript": {
      "formatter": {
        "arrowParentheses": "asNeeded",
        "bracketSpacing": true,
        "quoteStyle": "single",
        "semicolons": "asNeeded",
      },
    },
    "json": {
      "parser": {
        "allowComments": false,
        "allowTrailingCommas": false,
      },
    },
    "linter": {
      "enabled": true,
      "rules": {
        "recommended": true,
        "style": {
          "useBlockStatements": "off",
        },
      },
    },
    "organizeImports": {
      "enabled": true,
    },
    "overrides": [
      {
        "include": [
          "*.test.ts",
        ],
        "linter": {
          "rules": {
            "style": {
              "noUnusedTemplateLiteral": "off",
            },
          },
        },
      },
    ],
    "vcs": {
      "clientKind": "git",
      "enabled": true,
      "useIgnoreFile": true,
    },
  },
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "use-the-correct-schema",
    "has-a-formatter-section",
    "has-a-javascript-section",
    "has-a-json-section",
    "has-a-linter-section",
    "has-a-organize-imports-section",
    "has-a-vcs-section",
    "has-an-overrides-section-array",
  ],
  "warnings": [
    "could-uses-space-in-formatter-indent-style",
    "could-uses-2-in-formatter-indent-width",
    "could-uses-lf-in-formatter-line-ending",
    "could-uses-more-than-80-in-formatter-line-width",
    "could-use-as-needed-in-javascript-formatter-arrow-parentheses",
    "could-use-true-in-javascript-formatter-bracket-spacing",
    "could-use-single-in-javascript-formatter-quote-style",
    "could-use-as-needed-in-javascript-formatter-semicolons",
    "could-use-false-in-json-parser-allow-comments",
    "could-use-false-in-json-parser-allow-trailing-commas",
    "could-use-true-in-linter-enabled",
    "could-use-all-preferred-but-more-strict-or-recommended-in-linter-rules",
    "could-use-off-in-linter-rules-style-use-block-statements",
    "could-use-true-in-organize-imports-enabled",
    "could-use-true-in-vcs-enabled",
    "could-use-git-in-vcs-client-kind",
    "could-use-true-in-vcs-use-ignore-file",
    "has-a-test-override",
  ],
}
`;

exports[`biome G full valid biome.json 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isCli": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": true,
    "isUsingBiome": true,
    "isUsingBun": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingKnip": false,
    "isUsingNyc": false,
    "isUsingOxc": false,
    "isUsingPreact": false,
    "isUsingReact": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingV8": false,
    "isUsingVitest": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "{"$schema":"./node_modules/@biomejs/biome/configuration_schema.json","formatter":{"indentStyle":"space","indentWidth":2,"lineEnding":"lf","lineWidth":120},"javascript":{"formatter":{"arrowParentheses":"asNeeded","bracketSpacing":true,"quoteStyle":"single","semicolons":"asNeeded"}},"json":{"parser":{"allowComments":false,"allowTrailingCommas":false}},"linter":{"enabled":true,"rules":{"recommended":true,"style":{"useBlockStatements":"off"}}},"organizeImports":{"enabled":true},"vcs":{"clientKind":"git","enabled":true,"useIgnoreFile":true}}",
  "fileContentObject": {
    "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
    "formatter": {
      "indentStyle": "space",
      "indentWidth": 2,
      "lineEnding": "lf",
      "lineWidth": 120,
    },
    "javascript": {
      "formatter": {
        "arrowParentheses": "asNeeded",
        "bracketSpacing": true,
        "quoteStyle": "single",
        "semicolons": "asNeeded",
      },
    },
    "json": {
      "parser": {
        "allowComments": false,
        "allowTrailingCommas": false,
      },
    },
    "linter": {
      "enabled": true,
      "rules": {
        "recommended": true,
        "style": {
          "useBlockStatements": "off",
        },
      },
    },
    "organizeImports": {
      "enabled": true,
    },
    "vcs": {
      "clientKind": "git",
      "enabled": true,
      "useIgnoreFile": true,
    },
  },
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "use-the-correct-schema",
    "has-a-formatter-section",
    "could-uses-space-in-formatter-indent-style",
    "could-uses-2-in-formatter-indent-width",
    "could-uses-lf-in-formatter-line-ending",
    "could-uses-more-than-80-in-formatter-line-width",
    "has-a-javascript-section",
    "could-use-as-needed-in-javascript-formatter-arrow-parentheses",
    "could-use-true-in-javascript-formatter-bracket-spacing",
    "could-use-single-in-javascript-formatter-quote-style",
    "could-use-as-needed-in-javascript-formatter-semicolons",
    "has-a-json-section",
    "could-use-false-in-json-parser-allow-comments",
    "could-use-false-in-json-parser-allow-trailing-commas",
    "has-a-linter-section",
    "could-use-true-in-linter-enabled",
    "could-use-all-preferred-but-more-strict-or-recommended-in-linter-rules",
    "could-use-off-in-linter-rules-style-use-block-statements",
    "has-a-organize-imports-section",
    "could-use-true-in-organize-imports-enabled",
    "has-a-vcs-section",
    "could-use-true-in-vcs-enabled",
    "could-use-git-in-vcs-client-kind",
    "could-use-true-in-vcs-use-ignore-file",
  ],
  "warnings": [
    "has-an-overrides-section-array",
  ],
}
`;
